# wardrobe-api

./: .env  .gitignore  Dockerfile  README.md  index.html  openapi.json  requirements.txt  spec.yml
out-fastapi/: README.md  openapi.yaml  requirements.txt  setup.cfg
out-fastapi/.openapi-generator/: FILES
out-fastapi/src/: main.py
out-fastapi/src/openapi_server/: main.py  security_api.py
out-fastapi/src/openapi_server/apis/: authentication_api.py  connections_api.py  items_api.py  outfits_api.py  wardrobes_api.py
out-fastapi/src/openapi_server/models/: accessory.py  auth_login_post_request.py  auth_register_post_request.py  bottomwear.py  connections_add_post_request.py  footwear.py  item.py  item_category.py  occasion.py  outfit.py  season.py  single_piece.py  time.py  topwear.py  underwear.py  user.py  wardrobe.py
out-fastapi/tests/: test_authentication_api.py  test_connections_api.py  test_items_api.py  test_outfits_api.py  test_wardrobes_api.py
out-flask/: setup.py
out-flask/.openapi-generator/: FILES
out-flask/openapi_server/: __main__.py
src/: main.py  security_api.py
src/apis/: authentication_api.py  connections_api.py  items_api.py  outfits_api.py  users_api.py  wardrobes_api.py
src/models/: accessory.py  auth_login_post_request.py  auth_register_post_request.py  bottomwear.py  color.py  connections_add_post_request.py  extra_models.py  footwear.py  item.py  kind.py  material.py  occasion.py  outfit.py  (+8 more)
tests/: conftest.py  test_authentication_api.py  test_connections_api.py  test_items_api.py  test_outfits_api.py  test_wardrobes_api.py
(+27 files in other folders)
